--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 best.pt filter=lfs diff=lfs merge=lfs -text
 last.pt filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
